--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -84,7 +84,8 @@
 # You will also need to set a password unless you explicitly disable protected
 # mode.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# bind 127.0.0.1 -::1
+# 绑定谁能访问该服务器
+bind 127.0.0.1 -::1 192.168.2.108
 
 # By default, outgoing connections (from replica to master, from Sentinel to
 # instances, cluster bus, etc.) are not bound to a specific local address. In
@@ -108,7 +109,7 @@
 # By default protected mode is enabled. You should disable it only if
 # you are sure you want clients from other hosts to connect to Redis
 # even if no authentication is configured.
-# 是否开启保护模式
+# 是否开启保护模式,如果需要远程访问需要关闭
 protected-mode yes
 
 # Redis uses default hardened security configuration directives to reduce the
@@ -136,7 +137,7 @@ protected-mode yes
 
 # Accept connections on the specified port, default is 6379 (IANA #815344).
 # If port 0 is specified Redis will not listen on a TCP socket.
-# 端口号
+# 设置redis的端口号
 port 6379
 
 # TCP listen() backlog.
@@ -311,7 +312,7 @@ tcp-keepalive 300
 # By default Redis does not run as a daemon. Use 'yes' if you need it.
 # Note that Redis will write a pid file in /var/run/redis.pid when daemonized.
 # When Redis is supervised by upstart or systemd, this parameter has no impact.
-# 是否在后台执行，yes：后台运行；no：不是后台运行
+# 是否在后台执行,设置程守护进程，yes：后台运行   no：不是后台运行
 daemonize yes 
 
 # If you run Redis from upstart or systemd, Redis can interact with your
@@ -344,20 +345,23 @@ daemonize yes
 #
 # Note that on modern Linux systems "/run/redis.pid" is more conforming
 # and should be used instead.
-pidfile /home/hang/pan/redis/data/redis_6379.pid
+# 如果是守护进程，就会生成一个pid文件, ./指的是redis启动的地方
+pidfile ./redis_6379.pid
 
 # Specify the server verbosity level.
 # This can be one of:
-# debug (a lot of information, useful for development/testing)
-# verbose (many rarely useful info, but not a mess like the debug level)
-# notice (moderately verbose, what you want in production probably)
-# warning (only very important / critical messages are logged)
+# 1. debug (a lot of information, useful for development/testing)
+# 2. verbose (many rarely useful info, but not a mess like the debug level)
+# 3. notice (moderately verbose, what you want in production probably)
+# 4. warning (only very important / critical messages are logged)
+# 日志的级别
 loglevel notice
 
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile /home/hang/pan/redis/data/redis_6379.log
+# 服务器是守护进程才会写日志，如果是就要设置 , ./redis启动目录
+logfile ./redis.log
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
@@ -382,6 +386,7 @@ logfile /home/hang/pan/redis/data/redis_6379.log
 # Set the number of databases. The default database is DB 0, you can select
 # a different one on a per-connection basis using SELECT <dbid> where
 # dbid is a number between 0 and 'databases'-1
+# redis的数据库个数(需要切换用 select dbId[0-16])
 databases 16
 
 # By default Redis shows an ASCII art logo only when started to log to the
@@ -415,6 +420,7 @@ set-proc-title yes
 #
 proc-title-template "{title} {listen-addr} {server-mode}"
 
+# RDB配置信息
 ################################ SNAPSHOTTING  ################################
 
 # Save the DB to disk.
@@ -437,6 +443,12 @@ proc-title-template "{title} {listen-addr} {server-mode}"
 # You can set these explicitly by uncommenting the following line.
 #
 # save 3600 1 300 100 60 10000
+# 900 秒内有1次变化就写入rdb
+save 900 1
+# 300 秒内有10次变化就写入rdb中
+save 300 10
+# 60 秒内有10000次变化就写入rdb中
+save 60 10000
 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
@@ -484,6 +496,7 @@ rdbchecksum yes
 # sanitize-dump-payload no
 
 # The filename where to dump the DB
+# rdb文件的名字
 dbfilename dump.rdb
 
 # Remove RDB files used by replication in instances without persistence
@@ -507,6 +520,7 @@ rdb-del-sync-files no
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
+# 持久化文件保存目录
 dir ./
 
 ################################# REPLICATION #################################
@@ -1381,8 +1395,9 @@ disable-thp yes
 # with the better durability guarantees.
 #
 # Please check https://redis.io/topics/persistence for more information.
-
-appendonly no
+# aof配置
+# aof是否打开 yes:打开  no：关闭
+appendonly yes
 
 # The base name of the append only file.
 #
@@ -1409,12 +1424,14 @@ appendonly no
 # - appendonly.aof.1.incr.aof, appendonly.aof.2.incr.aof as incremental files.
 # - appendonly.aof.manifest as a manifest file.
 
+# aof文件称
 appendfilename "appendonly.aof"
 
 # For convenience, Redis stores all persistent append-only files in a dedicated
 # directory. The name of the directory is determined by the appenddirname
 # configuration parameter.
 
+# aof文件夹名称
 appenddirname "appendonlydir"
 
 # The fsync() call tells the Operating System to actually write data on disk
@@ -1440,9 +1457,13 @@ appenddirname "appendonlydir"
 #
 # If unsure, use "everysec".
 
-# appendfsync always
-appendfsync everysec
-# appendfsync no
+# 设置aof写入频率
+# 每次写都写入
+# appendfsync always   
+# 每秒都写入
+appendfsync everysec   
+# 操作系统强制刷新才同步
+# appendfsync no       
 
 # When the AOF fsync policy is set to always or everysec, and a background
 # saving process (a background save or AOF log background rewriting) is
